--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 Django = "^4.2.4"
+psycopg2-binary = "^2.9.7"
+mongoengine = "^0.27.0"
+pymongo = "^4.5.0"
+sqlalchemy = "^2.0.20"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.14.0"
