--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ psycopg2-binary = "^2.9.7"
 mongoengine = "^0.27.0"
 pymongo = "^4.5.0"
 sqlalchemy = "^2.0.20"
+pillow = "^10.0.0"
+django-bootstrap5 = "^23.3"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.14.0"
