--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pymongo = "^4.5.0"
 sqlalchemy = "^2.0.20"
 pillow = "^10.0.0"
 django-bootstrap5 = "^23.3"
+django-tinymce = "^3.6.1"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.14.0"
