--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ sqlalchemy = "^2.0.20"
 pillow = "^10.0.0"
 django-bootstrap5 = "^23.3"
 django-tinymce = "^3.6.1"
+django-environ = "^0.11.2"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.14.0"
