--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,19 +13,10 @@ mongoengine = "^0.27.0"
 pymongo = "^4.5.0"
 sqlalchemy = "^2.0.20"
 pillow = "^10.0.0"
-django-bootstrap5 = "^23.3"
-django-tinymce = "^3.6.1"
+python-dotenv = "^1.0.1"
 django-environ = "^0.11.2"
 
 [tool.poetry.group.dev.dependencies]
-ipython = "^8.14.0"
-black = "^23.3.0"
-coverage = "^7.2.7"
-pre-commit = "^3.3.3"
-pyupgrade = "^3.7.0"
-ruff = "^0.0.275"
-rich = "^13.4.2"
-mypy = "^1.4.1"
 
 [build-system]
 requires = ["poetry-core"]
